--- a/wrapper.html
+++ b/wrapper.html
@@ -184,7 +184,6 @@
 
 	<link rel='stylesheet' id='baseline-css' href='https://dbqvwi2zcv14h.cloudfront.net/ak/ak-v3.css'
 		type='text/css' media='screen' />
-
 	<link rel='stylesheet' href='https://dbqvwi2zcv14h.cloudfront.net/ak/custom.css' type='text/css' media='screen' />
 
 	{% if templateset.custom_fields.site_addl_css_url %}
@@ -200,8 +199,8 @@
 	{% if page.custom_fields.page_background_image %}
 		<style>
 			#body-mobile-background {
-				background-color: {{templateset.custom_fields.color_page}};
-				background-image: url({{ page.custom_fields.page_background_image }});
+				background-color: '{{templateset.custom_fields.color_page}}';
+				background-image: url('{{ page.custom_fields.page_background_image }}');
 			}
 
 		</style>
@@ -363,7 +362,51 @@
 </head>
 
 <body
-	class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.iso_code|default:'en-US'}} page-layout-{% if page.custom_fields.page_layout_style %}{{ page.custom_fields.page_layout_style }}{% else %}condensed{% endif %} {% if page.lang.is_rtl %}ak-rtl{% endif %} no-js ak-no-js ">
+class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.iso_code|default:'en-US'}} page-layout-{% if page.custom_fields.page_layout_style %}{{ page.custom_fields.page_layout_style }}{% else %}condensed{% endif %} {% if page.lang.is_rtl %}ak-rtl{% endif %} no-js ak-no-js body-{{ page.custom_fields.page_background_color }} {% if page.custom_fields.after_action_next_step == 'flow' %}afteraction-flow{% endif%}">
+	{% if page.custom_fields.flow_show_logo == 'Y' %}
+		<nav id="flow-logo-bar">
+			<div class="flow-logo-wrapper">
+				<span class="text-large2">
+					<a class="tf-logo text-large3" href="{% filter ak_text:"footer_logo_url" %}https://350.org/{% endfilter %}">
+						350.org
+					</a>
+				</span>
+			</div>
+		</nav>
+		<style>
+		#flow-logo-bar {
+			position: absolute;
+			left: 0;
+		}
+
+		.flow-logo-wrapper {
+			display: flex;
+			background: #107FE5;
+			border-radius: 16px;
+			width: 60px;
+			height: 52px;
+			padding: 20px;
+			font-weight: bold;
+			text-decoration: none;
+			align-items: center;
+			justify-content: center;
+			position: absolute;
+			top: 22px;
+			left: 22px;
+			z-index: 1000;
+		}
+
+		.flow-logo-wrapper .tf-logo {
+			width: 42px;
+			height: auto;
+		}
+
+		.body-dkgray_opaque .flow-logo-wrapper {
+			background: #172429;
+		}
+
+		</style>
+	{% endif %}
 
 	{% if page.custom_fields.page_disable_gtm != 'Y' %}
 	<!-- Google Tag Manager (noscript) -->
@@ -622,7 +665,7 @@
 		}
 	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.8.26/dayjs.min.js"></script>
-	<div id="body-mobile-background"></div>
+	<div id="body-mobile-background" class="bg-{{ page.custom_fields.page_background_color }}"></div>
 	{% block scripts %}
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
 
@@ -631,7 +674,3 @@
 </body>
 
 </html><!-- one more test for cache awesomeness -->
-
-
-
-
