--- a/thanks.html
+++ b/thanks.html
@@ -369,6 +369,10 @@
 				}
 				var initialShareURL = e.target.href;
 				var linkButton = e.target;
+				if (!actionID && !origPageName) {
+					navigator.clipboard.writeText(window.location.href);
+					return;
+				}
 				initialShareURL += `&action_id=${actionID}&page=${origPageName}&source=share-ak-thanksflow-copylink`;
 				if (typeof gtag !== 'undefined') {
 					gtag('event', 'scrolling-signup', {'click_id': 'thanksflow_share_copylink'});
