Audit white background flow styles

--- a/donate.html
+++ b/donate.html
@@ -164,6 +164,9 @@
   .bg-white_opaque-fade #ak-multi-currency {
     color: #144872;
   }
+  .bg-white_opaque-fade .cant-donate {
+    color: #144872;
+  }
   .bg-white_opaque-fade .ak-donate-step-1 .ak-step-number::after,
   .bg-white_opaque-fade .ak-donate-step-2 .ak-step-number::after,
   .bg-white_opaque-fade .ak-donate-step-2 .ak-step-complete::after,
