Use JavaScript void for href

--- a/afteraction-flow-share.html
+++ b/afteraction-flow-share.html
@@ -62,7 +62,7 @@
 						<span class="text-small">Whatsapp</span>
 					</div>
 					<div class="afteraction-bluesky-share-intro afteraction-share-option-intro margin-bottom-medium">
-						<a class="afteraction-share-bluesky bluesky-share button-icon bg-bluesky-color bg-bluesky-icon button-share-bluesky" href="#" data-share-href="/share/link?type=ot&bluesky=true&short=1" role="button" tabindex="0" onclick="return false;">
+						<a class="afteraction-share-bluesky bluesky-share button-icon bg-bluesky-color bg-bluesky-icon button-share-bluesky" href="javascript:void(0);" data-share-href="/share/link?type=ot&bluesky=true&short=1">
 						</a>
 						<span class="text-small">Bluesky</span>
 					</div>
