Add extra guards to prevent default

--- a/afteraction-flow-share.html
+++ b/afteraction-flow-share.html
@@ -62,7 +62,7 @@
 						<span class="text-small">Whatsapp</span>
 					</div>
 					<div class="afteraction-bluesky-share-intro afteraction-share-option-intro margin-bottom-medium">
-						<a class="afteraction-share-bluesky bluesky-share button-icon bg-bluesky-color bg-bluesky-icon button-share-bluesky" href="javascript:void(0);" data-share-href="/share/link?type=ot&bluesky=true&short=1">
+						<a class="afteraction-share-bluesky bluesky-share button-icon bg-bluesky-color bg-bluesky-icon button-share-bluesky" data-share-href="/share/link?type=ot&bluesky=true&short=1" role="button" tabindex="0">
 						</a>
 						<span class="text-small">Bluesky</span>
 					</div>
@@ -248,6 +248,9 @@
 
     $('.bluesky-share').on('click', function(e) {
       e.preventDefault();
+	  e.stopPropagation();
+  	  e.stopImmediatePropagation();
+
       if (typeof gtag !== 'undefined') {
         // send google analytics event
         gtag('event', 'scrolling-signup', {'click_id': 'thanksflow_share_bsk'});
