--- a/wrapper.html
+++ b/wrapper.html
@@ -324,6 +324,12 @@
 			{% elif page.custom_fields.page_add_regional_fb_pixel == '350 Germany' %}
 			<img height="1" width="1" style="display:none"
 		src="https://www.facebook.com/tr?id=440122750549924&ev=PageView&noscript=1" />
+		{% elif page.custom_fields.page_add_regional_fb_pixel == '350 PT' %}
+			<img height="1" width="1" style="display:none"
+		src="https://www.facebook.com/tr?id=960998399567137&ev=PageView&noscript=1" />
+		{% elif page.custom_fields.page_add_regional_fb_pixel == '350 ES' %}
+			<img height="1" width="1" style="display:none"
+		src="https://www.facebook.com/tr?id=28932143223067254&ev=PageView&noscript=1" />
 			{% endif %}
 		</noscript>
 	<!-- End Facebook Pixel Code -->
